# pico-sdk-template

./: .gitignore  CMakeLists.txt  README.md
include/: test.hpp
src/: main.cpp
